/*
 * SPDX-License-Identifier: Apache-2.0
 *
 * The OpenSearch Contributors require contributions made to
 * this file be licensed under the Apache-2.0 license or a
 * compatible open source license.
 *
 * Modifications Copyright OpenSearch Contributors. See
 * GitHub history for details.
 */

syntax = "proto3";
package org.opensearch.server.proto;

import "server/QuerySearchResultProto.proto";
import "server/FetchSearchResultProto.proto";

option java_outer_classname = "QueryFetchSearchResultProto";

message QueryFetchSearchResult {
  QuerySearchResult queryResult = 1;
  FetchSearchResult fetchResult = 2;
}
